updates to the teaser site

--- a/_code/_teaser/assets/stylesheets/_module/_m-form.scss
+++ b/_code/_teaser/assets/stylesheets/_module/_m-form.scss
@@ -58,6 +58,8 @@ label {
   line-height: 1;
   color: $gray-4;
   white-space: nowrap;
+
+  &.is-hidden { display: none; }
 }
 
 .is-focused > label {
