--- a/_code/_static/_scss/_style.scss
+++ b/_code/_static/_scss/_style.scss
@@ -37,6 +37,22 @@ button {
   padding: 20px;
   font-size: 1.75em;
   text-shadow: 0px 2px 0px #00B6E4;
+  &.secondary {
+    background: #FFFFFF;
+    color: #2DCFF7;
+    border: 2px solid #2DCFF7;
+  }
+  &.tertiary {
+    background: #FFFFFF;
+    border: 2px solid #959DAB;
+    color: #959DAB;
+  }
+  &.disabled {
+    background: #FFFFFF;
+    border: 2px solid #DADDE0;
+    color: #B5BDC9;
+    text-shadow: 0px 2px 0px rgba(255,254,254,0.70);
+  }
 }
 
 .sign-in {
@@ -67,3 +83,16 @@ button {
 .submission {
   text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
