--- a/_code/_static/_scss/_style.scss
+++ b/_code/_static/_scss/_style.scss
@@ -8,12 +8,8 @@ body {
 }
 
 a {
-  display: block;
-  text-align: center;
-  font-size: 28px;
-  color: #F666B4;
+  color: #606874;
   text-decoration: none;
-  margin-top: 30px;
 }
 
 label {
@@ -59,6 +55,44 @@ button {
   padding: 71px 59px;
   .box {
     margin: 30px 0;
+  }
+  a {
+    display: block;
+    text-align: center;
+    font-size: 28px;
+    color: #F666B4;
+    text-decoration: none;
+    margin-top: 30px;
+  }
+}
+#map {
+  width: 100vw;
+  height: 100vh;
+  background: #D8D8D8;
+}
+#nav {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
+  background: #ffffff;
+  a {
+    @include box-sizing(border-box);
+    position: relative;
+    display: inline-block;
+    width: 33%;
+    padding: 30px 0;
+    text-align: center;
+    &.selected {
+      color: #F345A6;
+      &:after {
+        content: '';
+        @include triangle(24px, #F345A6, up);
+        position: absolute;
+        bottom: 0;
+        left: 45%;
+      }
+    }
   }
 }
 .wrapper {
