--- a/_code/_static/_scss/_style.scss
+++ b/_code/_static/_scss/_style.scss
@@ -21,6 +21,7 @@ label {
 input {
   border: none;
   width: 100%;
+  margin: 0;
   font-size: 1.75em;
   font-weight: 300;
   color: #5D6473;
@@ -95,6 +96,18 @@ button {
     }
   }
 }
+#search {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  background: #ffffff;
+  input {
+    @include box-sizing(border-box);
+    width: 75%;
+    padding: 19px;
+    box-shadow: inset rgba(0,0,0,0.4) 2px 0px 10px -5px;
+  }
+}
 .wrapper {
   width: 521px;
   margin: 0 auto;
@@ -117,7 +130,14 @@ button {
 .submission {
   text-align: center;
 }
-
+.back {
+  float: left;
+  width: 60px;
+  height: 70px;
+  border-right: 2px solid #E2E6EA;
+  background: url(../_img/left-arrow.png)no-repeat center;
+  background-size: 25%;
+}
 
 
 
