--- a/_code/_static/_css/_style.css
+++ b/_code/_static/_css/_style.css
@@ -109,7 +109,8 @@ button {
   width: 100%;
   bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
-  background: #ffffff; }
+  background: #ffffff;
+  z-index: 9; }
   #nav a {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -142,7 +143,7 @@ button {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    width: 75%;
+    width: 89%;
     padding: 19px;
     box-shadow: inset rgba(0, 0, 0, 0.4) 2px 0px 10px -5px; }
 
@@ -169,7 +170,27 @@ button {
 .back {
   float: left;
   width: 60px;
-  height: 70px;
+  height: 71px;
   border-right: 2px solid #E2E6EA;
   background: url(../_img/left-arrow.png) no-repeat center;
   background-size: 25%; }
+
+.list {
+  background-color: rgba(0, 0, 0, 0.06);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.06)), color-stop(10px, rgba(255, 255, 255, 0)));
+  background-image: -webkit-linear-gradient(-90deg, rgba(0, 0, 0, 0.06) 0%, rgba(255, 255, 255, 0) 10px);
+  background-image: linear-gradient(-180deg,rgba(0, 0, 0, 0.06) 0%, rgba(255, 255, 255, 0) 10px);
+  position: absolute;
+  top: 71px;
+  background-color: #ffffff;
+  width: 100%;
+  height: 90%;
+  border-top: 2px solid #D4D8DC; }
+  .list li {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 20px;
+    border-bottom: 1px solid #E2E6EA; }
+  .list .invite {
+    padding-left: 100px; }
