--- a/_code/_static/_scss/_style.scss
+++ b/_code/_static/_scss/_style.scss
@@ -77,6 +77,7 @@ button {
   bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
   background: #ffffff;
+  z-index: 9;
   a {
     @include box-sizing(border-box);
     position: relative;
@@ -103,7 +104,7 @@ button {
   background: #ffffff;
   input {
     @include box-sizing(border-box);
-    width: 75%;
+    width: 89%;
     padding: 19px;
     box-shadow: inset rgba(0,0,0,0.4) 2px 0px 10px -5px;
   }
@@ -133,10 +134,27 @@ button {
 .back {
   float: left;
   width: 60px;
-  height: 70px;
+  height: 71px;
   border-right: 2px solid #E2E6EA;
   background: url(../_img/left-arrow.png)no-repeat center;
   background-size: 25%;
+}
+.list {
+  @include linear-gradient(-180deg, rgba(0,0,0,0.06) 0%, rgba(255,255,255,0.00) 10px);
+  position: absolute;
+  top: 71px;
+  background-color: #ffffff;
+  width: 100%;
+  height: 90%;
+  border-top: 2px solid #D4D8DC;
+  li {
+    @include box-sizing(border-box);
+    padding: 20px;
+    border-bottom: 1px solid #E2E6EA;
+  }
+  .invite {
+    padding-left: 100px;
+  }
 }
 
 
