Finish Notification list

--- a/_code/_static/_css/_style.css
+++ b/_code/_static/_css/_style.css
@@ -84,7 +84,8 @@ a.btn {
   a.btn.tertiary {
     background: #FFFFFF;
     border: 2px solid #959DAB;
-    color: #959DAB; }
+    color: #959DAB;
+    text-shadow: none; }
   button.disabled,
   a.btn.disabled {
     background: #FFFFFF;
@@ -152,6 +153,13 @@ a.btn {
     padding: 19px;
     box-shadow: inset rgba(0, 0, 0, 0.4) 2px 0px 10px -5px; }
 
+#notifications.list .description {
+  width: 80%; }
+#notifications.list .btn {
+  float: left;
+  margin-top: 10px;
+  margin-right: 20px; }
+
 .wrapper {
   width: 521px;
   margin: 0 auto; }
@@ -201,7 +209,7 @@ a.btn {
       display: table; }
     .list li:after {
       clear: both; }
-  .list .name,
+  .list .description,
   .list .status {
     float: left;
     font-size: 1.5em;
@@ -215,10 +223,13 @@ a.btn {
     font-size: 1.5em; }
   .list .status {
     float: right; }
-  .list .approved {
+  .list .approved,
+  .list .alert {
     width: 32px;
     height: 32px;
     background: url(../_img/approved.png) no-repeat center; }
+  .list .alert {
+    background: url(../_img/alert.png) no-repeat center; }
 
 .profile-img-small {
   float: left;
