--- a/_code/_static/_css/_style.css
+++ b/_code/_static/_css/_style.css
@@ -118,7 +118,8 @@ a.btn {
   background: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.5) -5px 2px 3px 0px;
   border: 1px solid #d4d8dc;
-  border-left-width: 0; }
+  border-left-width: 0;
+  z-index: 99; }
   #menu-toggle a {
     display: block;
     width: 32px;
@@ -161,12 +162,13 @@ a.btn {
 
 #map {
   width: 100vw;
-  height: 100vh;
+  height: 92%;
   background: #D8D8D8; }
 
 #nav {
   position: fixed;
   width: 100%;
+  height: 8%;
   bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
   background: #ffffff;
