--- a/_code/_static/_scss/_style.scss
+++ b/_code/_static/_scss/_style.scss
@@ -81,6 +81,7 @@ a.btn {
   box-shadow: rgba(0, 0, 0, 0.5) -5px 2px 3px 0px;
   border: 1px solid #d4d8dc;
   border-left-width: 0;
+  z-index: 99;
   a {
     display: block;
     width: 32px;
@@ -130,12 +131,13 @@ a.btn {
 }
 #map {
   width: 100vw;
-  height: 100vh;
+  height: 92%;
   background: #D8D8D8;
 }
 #nav {
   position: fixed;
   width: 100%;
+  height: 8%;
   bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
   background: #ffffff;
