--- a/_code/_promo/_assets/stylesheets/main.scss
+++ b/_code/_promo/_assets/stylesheets/main.scss
@@ -88,7 +88,8 @@
 
 .image--screenshot {
   @extend .image;
-  height: 620px;
+  width: ($column * 3);
+  height: auto;
   background-size: 377px 620px;
 }
 
@@ -103,16 +104,16 @@
 }
 
 #add-sh {
-  background-image: url('../images/add-friends@2x.png');
+  // background-image: url('../images/add-friends@2x.png');
 }
 
 #map-sh {
-  background-image: url('../images/use-the-map@2x.png');
-  background-position: right;
+  // background-image: url('../images/use-the-map@2x.png');
+  // background-position: right;
 }
 
 #stay-put-sh {
-  background-image: url('../images/ask-for-a-stay-put@2x.png');
+  //background-image: url('../images/ask-for-a-stay-put@2x.png');
 }
 
 #white-franc {
