--- a/_code/_static/_css/_style.css
+++ b/_code/_static/_css/_style.css
@@ -168,7 +168,7 @@ a.btn {
 #nav {
   position: fixed;
   width: 100%;
-  height: 8%;
+  height: 12%;
   bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
   background: #ffffff;
@@ -178,9 +178,9 @@ a.btn {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     position: relative;
-    display: inline-block;
+    float: left;
     width: 33%;
-    padding: 30px 0;
+    padding: 35px 0;
     text-align: center; }
     #nav a.selected {
       color: #F345A6; }
