--- a/_code/_static/_scss/_style.scss
+++ b/_code/_static/_scss/_style.scss
@@ -137,7 +137,7 @@ a.btn {
 #nav {
   position: fixed;
   width: 100%;
-  height: 8%;
+  height: 12%;
   bottom: 0;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 0px;
   background: #ffffff;
@@ -145,9 +145,9 @@ a.btn {
   a {
     @include box-sizing(border-box);
     position: relative;
-    display: inline-block;
+    float: left;
     width: 33%;
-    padding: 30px 0;
+    padding: 35px 0;
     text-align: center;
     &.selected {
       color: #F345A6;
