updating the scss

--- a/_code/_promo/_assets/stylesheets/constants.scss
+++ b/_code/_promo/_assets/stylesheets/constants.scss
@@ -24,6 +24,8 @@ $error:         hsl(360,84%,67%);
 // TYPOGRAPHY
 
 $font-stack-proportional: "Source Sans", sans-serif;
+$font-stack-icons:        "Flaticons Stroke", sans-serif;
+$font-stack-social:       "Flaticons Social", sans-serif;
 
 $font-light: 300;
 $font-normal: 400;
