--- a/_code/_promo/_assets/stylesheets/fonts.scss
+++ b/_code/_promo/_assets/stylesheets/fonts.scss
@@ -9,4 +9,5 @@
 // Flaticons Social
 // https://flaticons.co/
 
-@include font-face("Flaticons Stroke", "../fonts/flaticons-social", normal, normal);
+@include font-face("Flaticons Social", "../fonts/flaticons-social", normal, normal);
+@include font-face("Flaticons Stroke", "../fonts/flaticons-stroke", normal, normal);
