--- a/_code/_promo/_assets/stylesheets/main.scss
+++ b/_code/_promo/_assets/stylesheets/main.scss
@@ -24,6 +24,7 @@
 }
 
 .full-width {
+  @include clearfix;
   position: relative;
   width: ($column * 8) + ($gutter * 7);
   margin: 0 auto;
@@ -35,8 +36,13 @@
   padding: 0;
 }
 
+.full-width--footer {
+  @extend .full-width;
+  padding: 0 0 ($baseline * 19) 0;
+}
+
 .m-mod {
-  @include transition (all $animation-duration);
+  @include transition (all $animation-duration ease-in-out);
   width: ($column * 4) + ($gutter * 3);
   text-shadow: 1px 1px 0px transparentize(white, 0.25), -1px -1px 1px transparentize(white, 0.25);
   > h2 {
@@ -88,9 +94,14 @@
 
 .image--screenshot {
   @extend .image;
-  width: ($column * 3);
+  width: ($column * 2.75);
   height: auto;
   background-size: 377px 620px;
+}
+
+.image--marker {
+  @extend .image;
+  width: auto;
 }
 
 #story-bg {
@@ -108,6 +119,7 @@
 }
 
 #map-sh {
+  float: right;
   // background-image: url('../images/use-the-map@2x.png');
   // background-position: right;
 }
@@ -117,13 +129,11 @@
 }
 
 #white-franc {
-  float: right;
-  width: 274px;
+  @include position(absolute, 0 0px 0px 0);
   height: 311px;
-  margin-top: -311 + ($baseline * 19);
-  margin-right: $gutter;
   background-image: url('../images/white-franc@2x.png');
   background-size: 274px 311px;
+  background-position: bottom right;
 }
 
 #met-up-group {
@@ -134,15 +144,41 @@
   background-size: 614px 374px;
 }
 
+#marker-1 {
+  @include position(absolute, 0 0 (-$baseline) 0px);
+  height: $column + $baseline;
+}
+
+#marker-2 {
+  @include position(absolute, 0 0px ($baseline * 2) 0);
+  height: $column - ($gutter - 1);
+}
+
+#marker-3 {
+  @include position(absolute, 0 0 ($baseline * 18.6666667) ($baseline * 60));
+  height: $baseline * 11 + 4;
+}
+
+#marker-4 {
+  @include position(absolute, 0 0 ($baseline * 46) ($baseline * 30));
+  height: $baseline * 9;
+}
+
+#marker-5 {
+  @include position(absolute, 0 0 ($baseline * 57.8333333) ($baseline * 90));
+  height: $baseline * 6 + 1;
+}
+
 footer {
   background: white;
 }
 
 .m-update {
   width: ($column * 6) + ($gutter * 5);
+  //margin-bottom: $baseline * 17;
   > h3 {
     @include font-size(3.2);
-    margin: 0 0 ($baseline * 4 + 4);
+    margin: 0 0 ($baseline * 10);
     line-height: 1.3125;
   }
   > p {
@@ -153,7 +189,83 @@ footer {
   }
 }
 
+.contact {
+  margin-bottom: $baseline * 6;
+}
 
+.contact-link {
+  @include font-size(1.2);
+  @include transition (all $animation-duration ease-in-out);
+  position: relative;
+  margin-right: $baseline * 5;
+  padding-top: $baseline * 5;
+  color: $gray;
+  text-shadow: 1px 1px 0px transparentize(white, 0.25), -1px -1px 1px transparentize(white, 0.25);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  &:before {
+    @include font-size(2.4);
+    @include position(absolute, 0px 0px 0 0);
+    width: 100%;
+    content: "\e7d7";
+    font-family: $font-stack-social;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    text-align: center;
+    speak: none;
+    -webkit-font-smoothing: antialiased;
+  }
+  &:last-child { margin-right: 0;}
+}
+
+.contact-link--email {
+  @extend .contact-link;
+  &:before {
+    font-family: $font-stack-icons;
+    content: "\e494";
+  }
+}
+
+.contact-link--twitter {
+  @extend .contact-link;
+  &:before {
+    content: "\e7d1";
+  }
+}
+
+.contact-link--dribbble {
+  @extend .contact-link;
+  &:before {
+    content: "\e7d7";
+  }
+}
+
+.m-subnav {
+  @include font-size(2);
+  margin-bottom: $baseline * 3;
+  line-height: 1.25; // 25px
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  > a {
+    display: inline-block;
+    margin-right: $baseline * 5;
+    color: $dark-gray;
+    &:last-child { margin-right: 0;}
+  }
+}
+
+small {
+  @include font-size(1.4);
+  line-height: 0.77777778; // 18px
+  color: $light-gray;
+}
+
+.m-divider {
+  margin-bottom: $baseline * 10;
+  display: block;
+  border: 1px dashed $lightest-gray;
+}
 .is-hidden {
   opacity: 0;
   display: none;
