--- a/_code/_promo/_assets/stylesheets/button.scss
+++ b/_code/_promo/_assets/stylesheets/button.scss
@@ -33,3 +33,18 @@
   border-color: $lighter-blue;
   color: $lighter-blue;
 }
+
+.m-button--primary {
+  @extend .m-button;
+  background: $light-blue;
+  @include background-image(linear-gradient(transparentize(white,0.84) 0, transparentize(white,1.0) 50%));
+  border: 1px solid $blue;
+  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.04), inset 0 0 0 1px $lighter-blue;
+  text-shadow: 0 1px 0 $blue;
+
+  &:hover {
+    color: white;
+    border-color: darken($blue, 6%);
+    background: darken($light-blue, 6%);
+  }
+}
