--- a/_code/_promo/_assets/stylesheets/form.scss
+++ b/_code/_promo/_assets/stylesheets/form.scss
@@ -44,9 +44,13 @@
     padding: 0 ($base-width * 3) 0;
     background: white;
     border: 1px solid $gray;
+    color: $darkest-gray;
     line-height: $baseline * 6;
-    &:hover { border-color: $blue;}
-    &:focus { @include placeholder { color: transparentize($gray, 0.5);}}
+    &:hover, &:focus { border-color: $blue;}
+    &:focus {
+      @include placeholder { color: transparentize($gray, 0.5);}
+      color: $darker-gray;
+    }
   }
 }
 
